Routing static files

--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Commonwealth Coffee</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/commonwealth.css">
   </head>
   <body>
     <h1>Commonwealth Coffee</h1>
   </body>
+  <script type="text/javascript" src="/js/bootstrap.min.js"></script>
 </html>
