--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -34,7 +34,20 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-6 col-md-offset-3">
+            <form method="post">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="text" name="email" value="" class="form-control" id="email">
+              </div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" name="password" value="" class="form-control" id="password">
+              </div>
+              <div class="form-group">
+                <input type="submit" name="submit" value="Submit" class="btn btn-default">
+              </div>
+            </form>
           </div>
         </div>
       </div>
