Added organization to registration template

--- a/templates/register.gohtml
+++ b/templates/register.gohtml
@@ -52,6 +52,14 @@
                   <input type="text" name="email" value="" class="form-control" id="email">
                 </div>
                 <div class="form-group">
+                  <label for="email">Phone</label>
+                  <input type="text" name="phone" value="" class="form-control" id="phone">
+                </div>
+                <div class="form-group">
+                  <label for="last_name">Organization</label>
+                  <input type="text" name="organization" value="" class="form-control" id="organization">
+                </div>
+                <div class="form-group">
                   <label for="password">Password</label>
                   <input type="password" name="password" value="" class="form-control" id="password">
                 </div>
