--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Commonwealth Coffee</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/commonwealth.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/commonwealth.css">
   </head>
   <body>
     <header>
@@ -34,7 +34,7 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-md-6 col-md-offset-3">
+          <div class="col-xs-12 col-md-4 col-md-offset-4">
             <form method="post">
               <div class="form-group">
                 <label for="email">Email</label>
@@ -75,6 +75,6 @@
       </div>
     </footer>
   </body>
-  <script type="text/javascript" src="/js/jquery.min.js"></script>
-  <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/static/js/jquery.min.js"></script>
+  <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 </html>
