--- a/templates/404.gohtml
+++ b/templates/404.gohtml
@@ -34,40 +34,10 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-md-6 col-md-offset-3">
-            {{ if .User }}
-              <p>{{ .User.ID }}: {{ .User.FirstName }} {{ .User.LastName }}</p>
-            {{ else }}
-              <form method="post">
-                <div class="form-group">
-                  <label for="first_name">First name</label>
-                  <input type="text" name="first_name" value="" class="form-control" id="first_name">
-                </div>
-                <div class="form-group">
-                  <label for="last_name">Last name</label>
-                  <input type="text" name="last_name" value="" class="form-control" id="last_name">
-                </div>
-                <div class="form-group">
-                  <label for="email">Email</label>
-                  <input type="text" name="email" value="" class="form-control" id="email">
-                </div>
-                <div class="form-group">
-                  <label for="email">Phone</label>
-                  <input type="text" name="phone" value="" class="form-control" id="phone">
-                </div>
-                <div class="form-group">
-                  <label for="last_name">Organization</label>
-                  <input type="text" name="organization" value="" class="form-control" id="organization">
-                </div>
-                <div class="form-group">
-                  <label for="password">Password</label>
-                  <input type="password" name="password" value="" class="form-control" id="password">
-                </div>
-                <div class="form-group">
-                  <input type="submit" name="submit" value="Sign up" class="btn btn-default">
-                </div>
-              </form>
-            {{ end }}
+          <div class="col-xs-12 text-center">
+            <h1>Oops!</h1>
+            <p>We couldn't find the page you requested.</p>
+            <p class="light small">HTTP 404: Not Found</p>
           </div>
         </div>
       </div>
