--- a/views/components/header.gohtml
+++ b/views/components/header.gohtml
@@ -14,6 +14,7 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/">Home</a></li>
+          <li><a href="/admin">Admin</a></li>
           <li><a href="/contact">Contact</a></li>
           <li><a href="/login">Log in</a></li>
         </ul>
