--- a/views/layouts/default.gohtml
+++ b/views/layouts/default.gohtml
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Commonwealth Coffee</title>
-    {{ template "stylesheets" }}
+    {{ template "stylesheets" . }}
   </head>
   <body>
-    {{ template "header" }}
+    {{ template "header" . }}
     <main>
-      {{ template "yield" }}
+      {{ template "yield" . }}
     </main>
-    {{ template "footer" }}
+    {{ template "footer" . }}
   </body>
-  {{ template "scripts" }}
+  {{ template "scripts" . }}
 </html>
 {{ end }}
