--- a/views/admin/index.gohtml
+++ b/views/admin/index.gohtml
@@ -14,7 +14,12 @@
     <div class="col-xs-12 col-md-4">
       <ul class="nav nav-pills nav-stacked">
         <li role="presentation">
-          <a href="/admin/users">
+          <a href="/products">
+            <span class="pad-right glyphicon glyphicon-th-large"></span>Products
+          </a>
+        </li>
+        <li role="presentation">
+          <a href="/users">
             <span class="pad-right glyphicon glyphicon-user"></span>Users
           </a>
         </li>
