Factored views and services into separate files in the handlers package. Replaced handler logic with service calls.

--- a/static/css/commonwealth.css
+++ b/static/css/commonwealth.css
@@ -95,3 +95,9 @@ a.list-el:hover {
   border: 1px solid #DDD;
   text-decoration: none;
 }
+
+.control-panel {}
+.control-panel .btn {
+  width: 100%;
+  margin-bottom: 8px;
+}
