--- a/views/products/index.gohtml
+++ b/views/products/index.gohtml
@@ -5,7 +5,6 @@
     <div class="col-xs-12">
       <ol class="breadcrumb">
         <li><a href="/">Home</a></li>
-        <li><a href="/admin">Admin</a></li>
         <li class="active">Products</li>
       </ol>
     </div>
@@ -30,7 +29,7 @@
                 {{ end }}
               </div>
               <div class="col-xs-8">{{ .Name }}</div>
-              <div class="col-sm-3 text-right">{{ printf "$%.2f" .Price }}</div>
+              <div class="col-sm-3 text-right">{{ .Price }}</div>
             </div>
           </a>
         </div>
