--- a/views/products/update.gohtml
+++ b/views/products/update.gohtml
@@ -6,21 +6,22 @@
       <ol class="breadcrumb">
         <li><a href="/">Home</a></li>
         <li><a href="/products">Products</a></li>
-        <li class="active">Create</li>
+        <li class="active">Update</li>
+        <li class="active">{{ .Product.Name }}</li>
       </ol>
     </div>
   </div>
-  <!-- Product create -->
+  <!-- Product update -->
   <form method="post">
     <div class="row">
       <div class="col-xs-12 col-md-8">
         <div class="form-group">
           <label for="name">Name</label>
-          <input type="text" name="name" value="" class="form-control">
+          <input type="text" name="name" class="form-control" value="{{ .Product.Name }}">
         </div>
         <div class="form-group">
           <label for="description">Description</label>
-          <textarea name="description" class="form-control"></textarea>
+          <textarea name="description" class="form-control">{{ .Product.Description }}</textarea>
         </div>
       </div>
       <div class="col-xs-12 col-md-4">
@@ -28,14 +29,14 @@
           <label for="price">Price</label>
           <div class="input-group">
             <div class="input-group-addon">$</div>
-            <input type="number" name="price" class="form-control" step="0.01" min="0">
+            <input type="number" name="price" class="form-control" step="0.01" min="0" value="{{ .Product.Price }}">
           </div>
         </div>
         <div class="form-group">
           <label for="price">Cost</label>
           <div class="input-group">
             <div class="input-group-addon">$</div>
-            <input type="number" name="cost" class="form-control" step="0.01" min="0">
+            <input type="number" name="cost" class="form-control" step="0.01" min="0" value="{{ .Product.Cost }}">
           </div>
         </div>
       </div>
@@ -44,11 +45,11 @@
       <div class="col-xs-12">
         <div class="checkbox">
           <label for="is_active">
-            <input type="checkbox" name="is_active" value="1" checked> Active
+            <input type="checkbox" name="is_active" value="1" {{ if .Product.IsActive }}checked{{ end }}> Active
           </label>
         </div>
         <div class="form-group">
-          <input type="submit" name="submit" value="Create" class="btn btn-default">
+          <input type="submit" name="submit" value="Update" class="btn btn-default">
         </div>
       </div>
     </div>
