--- a/views/products/view.gohtml
+++ b/views/products/view.gohtml
@@ -14,6 +14,7 @@
     <!-- Control panel -->
     <div class="col-xs-12 col-md-3">
       <div class="control-panel">
+        <div class="hidden-xs" style="padding-top: 24px"></div>
         <a href="/products/{{ .Product.ID}}/update" class="btn btn-default">Edit</a>
       </div>
     </div>
