--- a/static/css/commonwealth.css
+++ b/static/css/commonwealth.css
@@ -83,6 +83,13 @@ footer div.footer-copy {
   padding-right: 12px;
 }
 
+h3 {
+  color: #999;
+  font-weight: 200;
+  letter-spacing: 1.6px;
+  text-transform: uppercase;
+}
+
 /* Elements */
 a.list-el {
   display: block;
